--- a/style/largescreen.css
+++ b/style/largescreen.css
@@ -1,3 +1,21 @@
+* {
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -ms-box-sizing: border-box;
+  -o-box-sizing: border-box;
+  box-sizing: border-box
+}
+
+html {
+  font-size: 62.5%;
+  scroll-behavior: smooth;
+}
+
+body {
+  font-size: 1.6rem
+}
 
 
 #img-article {
@@ -30,7 +48,7 @@ main a {
 
 main h1 {
   font-family: 'Lato', serif;
-	font-size: 45px;
+	font-size: 4.5rem;
 	font-weight: 600;
 	line-height: 1.07;
 	text-align: left;
@@ -43,7 +61,7 @@ main .author {
   margin : 0px;
   color : #979797;
   font-style: italic;
-  font-size : 13px;
+  font-size : 1.3rem;
 }
 
 main .author-name {
@@ -67,7 +85,7 @@ main .date a {
 .txt-courant {
   margin : 0px;
   font-family: 'Crimson Text';
-  font-size: 22px;
+  font-size: 2.2rem;
   text-align: left;
   color: #2e2e2e;
   line-height: 1.5;
@@ -97,7 +115,7 @@ blockquote {
 }
 
 blockquote p {
-  font-size: 24px;
+  font-size: 2.4rem;
   font-weight: 600;
   font-style: italic;
   line-height: 1.23;
@@ -122,7 +140,7 @@ blockquote p {
 
 
 cite {
-  font-size: 16px;
+  font-size: 1.6rem;
   font-weight: normal;
   line-height: 2.0;
   color: #979797;
@@ -131,7 +149,7 @@ cite {
 
 main h2 {
   font-family: 'Lato', serif;
-	font-size: 30px;
+	font-size: 3rem;
 	font-weight: bold;
 	line-height: 1.13;
 	text-align: left;
@@ -153,7 +171,7 @@ main h2 {
 
 .article-tag {
   font-family: 'Lato', sans-serif;
-  font-size: 11px;
+  font-size: 1.1rem;
   line-height: 2.18;
   text-align: center;
   color: #0b213b;
@@ -192,7 +210,7 @@ main h2 {
     font-family: 'Lato', serif;
     margin : 0px;
     font-style: italic;
-    font-size : 16px;
+    font-size : 1.6rem;
     color : #0B213B;
   }
 
@@ -213,7 +231,7 @@ main h2 {
 
   .comment-content {
     font-family: 'Lato', sans-serif;
-    font-size: 16px;
+    font-size: 1.6rem;
     font-style: italic;
     line-height: 1.5;
     text-align: left;
@@ -237,7 +255,7 @@ main h2 {
 .cta p {
   font-family: 'Lato', sans-serif;
   text-decoration: none;
-  font-size: 14px;
+  font-size: 1.4rem;
   text-align: center;
   font-weight: bold;
   color: #0b213b;
